force-app/main/default/objects/CTRCDDNACCTransaction__c.object
<CustomObject>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CTR CDD NACC Transaction</relationshipLabel>
        <relationshipName>CTR_CDD_NACC_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentUrl__c</fullName>
        <label>DocumentUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FindingWeb__c</fullName>
        <label>FindingWeb</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Found</fullName>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntegrationMessage__c</fullName>
        <label>Integration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntegrationStatus__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NACCMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NACCMaster</label>
        <referenceTo>CTRCDDNACCMaster__c</referenceTo>
        <relationshipLabel>CTR CDD NACC Transaction</relationshipLabel>
        <relationshipName>CTR_CDD_NACC_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PositionType__c</fullName>
        <label>PositionType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>Shareholders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shareholder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shareholder</label>
        <referenceTo>CTRShareholder__c</referenceTo>
        <relationshipLabel>CTR CDD NACC Transaction</relationshipLabel>
        <relationshipName>CTR_CDD_NACC_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>CTR CDD NACC Transaction</label>
    <nameField>
        <label>CTRCDDNACCTransaction Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>